--- a/src/Dashboard/earningModal.css
+++ b/src/Dashboard/earningModal.css
@@ -67,3 +67,10 @@
     max-width: 56.5% !important;
 
 }
+
+@media screen and (max-width: 900px) {
+    .earning-modal-size{
+        max-width: 100% !important;
+    
+    }
+  }
