--- a/src/Dashboard/roxoPlay.css
+++ b/src/Dashboard/roxoPlay.css
@@ -94,3 +94,17 @@
 .roxo-play-parent {
   padding: 30px 0px;
 }
+
+@media screen and (max-width: 900px) {
+  .cards-space-betweeen{
+    margin-left: 0px;
+    width: 80%;
+    margin-top: 40px;
+  }
+  .column-size{
+    width: 80%;
+  }
+  .display-main-flex{
+    flex-direction: column;
+  }
+}
