--- a/src/HomePage/login.css
+++ b/src/HomePage/login.css
@@ -167,6 +167,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-end;
+    padding-left: 13px;
   }
   .login-form-display {
     display: flex !important;
