--- a/src/HomePage/play.css
+++ b/src/HomePage/play.css
@@ -105,7 +105,8 @@ flex-direction: row;
         margin-top: 40px;
     }
     .play-image-size {
-        height: 423px;
+        height: 320px;
+        margin-top: 100px;
     }
     .first-buttons-style {
         display: flex;
