--- a/src/HomePage/gamingNft.css
+++ b/src/HomePage/gamingNft.css
@@ -1,5 +1,5 @@
 .gaming-nft-outer {
-  padding: 40px 12px;
+  padding: 60px 12px;
 }
 
 .gaming_nft {
@@ -9,9 +9,9 @@
 .gaming-nft-heading {
   border-left: 4px solid #c438ef;
   padding-left: 15px;
-  margin-left: 14vh;
-  margin-bottom: 30px;
-  margin-top: 30px;
+  margin-left: 2vh;
+  margin-top: 2px;
+  margin-bottom: 54px;
 }
 .gaming-nft-inner-flex {
   display: flex;
@@ -142,8 +142,8 @@
   box-shadow: 2px 2px 20px rgb(0 0 0 / 20%);
 }
 
-.image-slider-style {
-  margin-left: 100px;
+.image-slider-game{
+  margin-left: 39px;
   border-radius: 12px;
   box-shadow: 2px 2px 20px rgb(0 0 0 / 20%);
 }
@@ -157,7 +157,21 @@
   /* background: linear-gradient( 90deg , rgba(222,153,33,1) 0%, rgba(243,121,86,1) 100%); */
   border: none;
 }
+.gamingnft-detail-bottom-outer{
 
+    background-color: #393469;
+    padding: 20px;
+    /* margin-top: 4%; */
+    border-radius: 12px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+}
+.gaming-nft-img-resp-margin{
+  margin: 0px;
+  border-radius: 12px;
+}
 @media screen and (max-width: 900px) {
   .gaming-inner-flex-images {
     display: flex !important;
@@ -192,4 +206,45 @@
   .gaming-nft-link-button-inner {
     margin-top: 12px;
   }
+  /* .image-slider-game{
+    margin-left: 44px;
+    border-radius: 12px;
+    box-shadow: 2px 2px 20px rgb(0 0 0 / 20%);
+} */
+.gaming-nft-slider-outer {
+  padding-left: 0px;
+  padding-right: 60px;
+}
+.tes-btn11{
+  display: none;
+}
+.tes-btn12{
+  display: none;
+}
+
+
+  .gamingnft-detail-bottom-outer {
+    background-color: #393469;
+    padding: 20px;
+   
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    align-items: center;
+    align-content: space-between;
+  }
+  .market-product-detail-background {
+    background-color: #262250;
+    margin: 50px;
+    height: 935px;
+    border-radius: 10px;
+    padding: 30px;
+  }
+  .gaming-nft-img-resp-margin {
+    margin-top: 20px;
+  }
+
+
 }
