--- a/src/HomePage/Tescards.css
+++ b/src/HomePage/Tescards.css
@@ -1,5 +1,5 @@
 .our-games-outer-pad {
-  padding: 40px 0px;
+  padding: 60px 0px;
 }
 
 .tes-scr {
@@ -27,8 +27,11 @@
   border-left: 4px solid #c438ef;
   padding-left: 15px;
   margin-left: 36vh;
-  margin-top: 30px;
+  margin-top: 2px;
+  margin-bottom: 29px;
+  /* padding-bottom: 60px; */
 }
+
 .tes-card {
   overflow: scroll;
 
