--- a/src/HomePage/footer.css
+++ b/src/HomePage/footer.css
@@ -21,3 +21,13 @@
     flex-direction: row;
     align-items: center;
 }
+
+
+@media screen and (max-width: 900px) {
+.image-left{
+  display: none;
+}
+.image-right{
+  display: none;
+}
+}
