--- a/src/HomePage/mileStoneStepper.css
+++ b/src/HomePage/mileStoneStepper.css
@@ -25,7 +25,7 @@
 .stepper-button-outer {
   display: flex !important;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: stretch;
 }
 .arrow-icon-style {
@@ -35,7 +35,14 @@
 .milestone-steper-pad {
   padding: 60px 0px;
 }
-
+.milestone-heading-outer {
+  border-left: 4px solid #c438ef;
+  padding-left: 15px;
+  margin-left: 19vh;
+  margin-top: 30px;
+  color: white;
+  margin-bottom: 55px;
+}
 @media screen and (max-width: 900px) {
   .stepper-content-background {
     background-color: #262250;
