--- a/src/HomePage/play.css
+++ b/src/HomePage/play.css
@@ -1,87 +1,86 @@
-.play-main-style{
-    display: flex;
-    flex-direction: row;
-    /* Padding-top: 80px; */
-    margin: -120px 0px;
-padding-bottom: 40px;
-}
-.play-text-style{
-    display: flex;
-    justify-content: center;
+.play-main-style {
+  display: flex;
+  flex-direction: row;
 
-    flex-direction: column;
-    align-items: center;
+  margin: -84px 0px;
+  padding-bottom: 44px;
 }
-.play-text-data-style{
-    max-width: 300px;
-    font-family: Helvetica, Arial, sans-serif;
-
-}
-.play-para{
-    font-family: Monterserat;
-    font-size: 15px;
-    line-height: 1.8;
-    text-align: end;
-
-}
-.getNow-style{
-    /* padding-left: 14px; */
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    padding-left: 14px;
+.play-heading-outer{
+    border-left: 4px solid #c438ef;
+    padding-left: 15px;
+    margin-left: 17vh;
+    margin-top: 28px;
+    margin-bottom: 5px;
     color: white;
-/* display: flex;
+}
+.play-text-style {
+  display: flex;
+  justify-content: center;
+
+  flex-direction: column;
+  align-items: center;
+}
+.play-text-data-style {
+  max-width: 300px;
+  font-family: Helvetica, Arial, sans-serif;
+}
+.play-para {
+  font-family: Monterserat;
+  font-size: 15px;
+  line-height: 1.8;
+  text-align: end;
+}
+.getNow-style {
+  /* padding-left: 14px; */
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding-left: 14px;
+  color: white;
+  /* display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center; */
-/* padding: 20px 0px; */
+  /* padding: 20px 0px; */
 }
-.google-play-image{
-    margin-left: 20px;
-
+.google-play-image {
+  margin-left: 20px;
 }
-.play-image-style{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.play-image-style {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.play-image-style img{
-   
-    /* box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.6); */
+.play-image-style img {
+  /* box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.6); */
 }
-.play-image-size{
-    /* height: 800px;
+.play-image-size {
+  /* height: 800px;
     width: 700px; */
-    height: 605px;
+  height: 605px;
 }
 
-.first-buttons-style{
-display: flex;
-flex-direction: row;
-
+.first-buttons-style {
+  display: flex;
+  flex-direction: row;
 }
-.second-buttons-style{
-    display: flex;
-    flex-direction: row;
-    
+.second-buttons-style {
+  display: flex;
+  flex-direction: row;
 }
-.button-style-play{
-  
-    /* padding: 4px 9px;
+.button-style-play {
+  /* padding: 4px 9px;
     margin: 8px 0px;
     background-color: #f0f2f5;
     color: #050505;
     font-size: 12px;
     font-family: Helvetica, Arial, sans-serif; */
 
-      
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
-
 
 /* @media screen and (max-width: 800px) {
     .play-main-style{
@@ -94,24 +93,24 @@ flex-direction: row;
     }
 
   } */
-  @media only screen and (max-width: 900px){
-    .play-main-style{
-        /* margin-top: 40px; */
-      display: flex;
-      flex-direction: column;
-      align-items: center
-    }
-    .play-text-style{
-        margin-top: 40px;
-    }
-    .play-image-size {
-        height: 320px;
-        margin-top: 100px;
-    }
-    .first-buttons-style {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        align-content: center;
-    }
+@media only screen and (max-width: 900px) {
+  .play-main-style {
+    /* margin-top: 40px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
+  .play-text-style {
+    margin-top: 40px;
+  }
+  .play-image-size {
+    height: 320px;
+    margin-top: 100px;
+  }
+  .first-buttons-style {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+  }
+}
