--- a/src/HomePage/work.css
+++ b/src/HomePage/work.css
@@ -1,14 +1,36 @@
-.text-align{
-    text-align: center;
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* align-items: center; */
+.work-outer {
+  color: white;
+  padding: 60px 40px;
 }
-.work-heading-style{
-    text-align: center;
-    color: white;
-    padding: 20px 0px;
+.work-heading-outer {
+    border-left: 4px solid #c438ef;
+    padding-left: 15px;
+    margin-left: 17vh;
+    margin-top: 30px;
+    margin-bottom: 63px;
 }
-.work-outer-style{
-    padding: 40px 0px;
+.work-button-style {
+  border-radius: 100px;
+  background-color: white;
+  color: black;
+  border-radius: 107px;
+  background-color: white;
+  color: black;
+  height: 50px;
+  width: 50px;
+  margin-bottom: 20px;
+  border: none;
+}
+.work-button-style:hover{
+    background-color: #58ACFF;
+}
+.work-content-section-backgroud {
+  background-color: #262250;
+  height: 300px;
+  width: 400px;
+  border-radius: 30px;
+  padding: 30px;
+  color: white;
+  text-align: center;
+  margin-left: 20px;
 }
