--- a/src/HomePage/header.css
+++ b/src/HomePage/header.css
@@ -280,16 +280,18 @@
   background-color: #201d47;
   font-weight: 1000;
 }
-/* .dropdown-content1 a{
-    margin: 0;
-    z-index: 3;
-
+.header-price-button-style{
+  border-radius: 25px !important;
+  color: white !important;
+  width: 120px !important;
+  height: 40px !important;
+  border: 1px solid #ff409a !important;
+  text-align: center !important;
+  background: transparent !important;
 }
-.dropdown-content a{
-    margin: 0;
-    z-index: 3;
-
-} */
+.header-price-button-style:hover{
+  background-color: #ff409a !important;
+}
 
 @media only screen and (max-width: 900px) {
   .header-nav {
@@ -318,6 +320,13 @@
   }
   .dropdown-content1 a {
     display: flex;
+  }
+  .header-price-button-style-resp{
+    background: transparent;
+    border: none;
+    color: white;
+    text-align: center;
+
   }
 }
 
