--- a/src/HomePage/play.css
+++ b/src/HomePage/play.css
@@ -113,4 +113,13 @@ align-items: center; */
     align-items: center;
     align-content: center;
   }
+  .play-heading-outer {
+    border-left: 4px solid #c438ef;
+    padding-left: 15px;
+    margin-left: 1vh;
+    margin-top: 156px !important;
+    margin-top: 28px;
+    margin-bottom: -50px;
+    color: white;
+}
 }
