--- a/src/HomePage/footerTwo.css
+++ b/src/HomePage/footerTwo.css
@@ -47,13 +47,13 @@ padding: 8px 0px;
 .footer {
   color: white;
   display: flex;
+  height: 228px;
   justify-content: space-between;
-  background-color: #262250;
-  margin-top: 120px;
+  /* background-color: #262250; */
+  /* margin-top: 120px; */
 }
 .footer-roxo-icons h3 {
   color: white;
-
 }
 .inner-icons {
   display: flex;
@@ -77,7 +77,7 @@ padding: 8px 0px;
 }
 .footer-content-style {
   text-align: center;
-  padding-top: 200px;
+  padding-top: 272px;
 }
 @media screen and (max-width: 900px) {
   .image-left {
