--- a/src/Support/support.css
+++ b/src/Support/support.css
@@ -5,6 +5,7 @@
   text-align: center;
   color: white;
   padding: 60px 0px;
+  font-family: 'Cinzel';
 }
 .support-heading-outer{
   /* border-bottom: 4px solid  #C438EF;
