--- a/src/HomePage/Tescards.css
+++ b/src/HomePage/Tescards.css
@@ -26,10 +26,15 @@
 .game-heading-outer {
   border-left: 4px solid #c438ef;
   padding-left: 15px;
-  margin-left: 36vh;
-  margin-top: 2px;
-  margin-bottom: 29px;
-  /* padding-bottom: 60px; */
+  margin-left: 7vh;
+  margin-top: 4px;
+  color: white;
+  margin-bottom: 38px;
+  font-family: "Cinzel";
+}
+.game-heading-outer h1 {
+  letter-spacing: 2px;
+  font-weight: bold;
 }
 
 .tes-card {
@@ -59,11 +64,12 @@
   border-top-left-radius: 20px;
 }
 .tes-scr h3 {
-  padding-left: 30px;
+  padding-left: 22px;
   color: #ffffff;
-  padding-top: 13px;
+  padding-top: 19px;
   font-size: 25px;
-  padding-bottom: 20px;
+  font-family: "Cinzel";
+  padding-bottom: 9px;
 }
 .cards-nav {
   color: #ffffff;
@@ -89,13 +95,14 @@
 }
 .tes-scr p {
   font-size: 20;
-  /* padding: 20px 30px; */
-  padding-top: 0 !important;
-  font-family: auto;
 
+  padding-top: 0 !important;
+
+  font-family: "Nuninto";
   color: #ffffff;
 }
 .tes-scr a {
+  font-family: 'Cinzel';
   text-decoration: none;
   color: white;
 }
@@ -183,7 +190,6 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-
 }
 .tes-scr h4 {
   align-items: center;
@@ -193,8 +199,9 @@
   display: flex;
   justify-content: space-between;
   padding-top: 38px;
-  margin-left: 7%;
+  margin-left: 6%;
   margin-top: 0;
+  font-family: 'Cinzel';
   margin-bottom: 0.5rem;
   font-weight: 500;
   line-height: 1.2;
