--- a/src/HomePage/header.css
+++ b/src/HomePage/header.css
@@ -2,19 +2,14 @@
   background-color: #201d47;
 }
 .header-nav {
-  /* display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center; */
   text-decoration: none;
-  /* border-bottom: 1px solid #ffffff; */
+
   box-shadow: 0 1px 8px rgb(0 0 0 / 30%);
   display: flex;
   background-color: #201d47;
   align-items: center;
   justify-content: space-evenly;
 
-  /* -------------- */
   color: #ffffff;
   font-family: auto;
   font-size: 15.5px;
@@ -27,18 +22,6 @@
 .display-header a {
   margin: 0px 20px;
 }
-/* .ourGames {
-  margin-left: 34px;
-}
-.ourCommunity {
-  margin-left: 34px;
-}
-.more {
-  margin-left: 34px;
-}
-.marketPlace {
-  margin-left: 34px;
-} */
 
 .glowCoin {
   position: absolute;
@@ -168,11 +151,9 @@
   margin-left: 10px;
 }
 
-.menu-btn {
-  background-color: transparent;
-  background-color: #201d47;
-  border-radius: 4px;
-  /* box-shadow: 2px 2px 0px 0px grey; */
+.menu-btn svg {
+  text-decoration: none;
+  color: white;
 }
 .logo-head {
   display: flex;
@@ -180,20 +161,21 @@
   flex-direction: row;
 }
 .slides {
-  width: 100%;
+  width: 50%;
   position: absolute;
   top: 100px;
+  left: 48%;
   background-color: #201d47;
   z-index: 3;
   display: none;
-  /* right: 10%; */
-  /* box-shadow: 2px 2px 2px 2px grey; */
 }
 .slide-down {
   background-color: #201d47;
   height: 50px;
   text-align: center;
   border-bottom: 1px solid;
+  color: white;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -207,6 +189,7 @@
   cursor: pointer;
   background-color: #201d47;
   height: 50px;
+  color: white;
   border-bottom: 1px solid;
   text-align: center;
   display: flex;
@@ -235,6 +218,9 @@
   color: #ffffff;
   left: 10px;
 }
+.font-style-header {
+  font-family: Cinzel;
+}
 .slide-down-1 p {
   margin-bottom: 0px;
   color: #ffffff;
@@ -262,7 +248,6 @@
   color: #ffffff;
   z-index: 3;
   right: 100%;
-  /* box-shadow: 2px 2px 2px 2px grey; */
 }
 
 .slide-down:hover {
@@ -277,7 +262,6 @@
   background-color: #201d47;
   color: #1c1e21;
   right: 100%;
-  /* box-shadow: 2px 2px 2px 2px grey; */
   z-index: 3;
 }
 .slide-down-1 {
@@ -310,7 +294,6 @@
 
     text-decoration: none;
     padding-top: 20px;
-    /* border-bottom: 1px solid gray; */
   }
   .dropdown-content img {
     margin-right: 10px !important;
@@ -342,6 +325,5 @@
     z-index: 3;
     display: none !important;
     right: 10%;
-    /* box-shadow: 2px 2px 2px 2px grey; */
   }
 }
