--- a/src/HomePage/ourCommunity.css
+++ b/src/HomePage/ourCommunity.css
@@ -18,6 +18,13 @@
 
   align-items: flex-end;
   color: #ffffff;
+
+}
+.community-heading h3{
+  font-family: 'Cinzel';
+}
+.community-heading p{
+  font-family: Nuninto;
 }
 
 .community-icon-detail {
@@ -41,10 +48,19 @@
   padding: 12px;
   color: black;
 }
+.icon-image-detail h3{
+  font-family: 'Cinzel';
+}
 .community-icon-content {
   max-width: 818px;
   /* padding: 8px; */
   padding-left: 39px;
+}
+.community-icon-content h3{
+  font-family: 'Cinzel';
+}
+.community-icon-content p{
+  font-family: Nuninto;
 }
 .twitter-icon-style {
   margin-left: 16px;
@@ -55,10 +71,15 @@
 .community-heading-outer {
   border-left: 4px solid #c438ef;
   padding-left: 15px;
-  margin-left: 17vh;
-  margin-top: 30px;
-  margin-bottom: 49px;
+  margin-left: 12vh;
+  margin-top: 4px;
   color: white;
+  margin-bottom: 38px;
+  font-family: 'Cinzel';
+}
+.community-heading-outer h1{
+  letter-spacing: 2px;
+  font-weight: bold;
 }
 @media only screen and (max-width: 900px) {
   .ourCommunity-outer-section {
@@ -72,8 +93,9 @@
     border-left: 4px solid #c438ef;
     padding-left: 15px;
     margin-left: 7vh;
-    margin-top: 30px;
-    margin-bottom: 49px;
+    margin-top: 4px;
     color: white;
+    margin-bottom: 38px;
+    font-family: 'Cinzel';
 }
 }
