--- a/src/HomePage/work.css
+++ b/src/HomePage/work.css
@@ -4,10 +4,16 @@
 }
 .work-heading-outer {
   border-left: 4px solid #c438ef;
-  padding-left: 15px;
-  margin-left: 17vh;
-  margin-top: 30px;
-  margin-bottom: 63px;
+    padding-left: 15px;
+    margin-left: 7vh;
+    margin-top: 4px;
+    color: white;
+    margin-bottom: 38px;
+    font-family: 'Cinzel';
+}
+.work-heading-outer h1{
+  letter-spacing: 2px;
+  font-weight: bold;
 }
 .work-button-style {
   border-radius: 100px;
@@ -39,6 +45,16 @@
   text-align: center;
   margin-left: 20px;
 }
+.work-content-section-backgroud h3{
+  font-family: 'Cinzel';
+}
+.work-content-section-backgroud p{
+  font-family: Nuninto;
+}
+.work-button-style-outer button{
+  font-family: 'Cinzel';
+  font-weight: bold;
+}
 .work-button-style-outer button:focus {
   background-color: #393469;
   color: white;
@@ -57,10 +73,12 @@
   }
   .work-heading-outer {
     border-left: 4px solid #c438ef;
-    padding-left: 13px;
-    margin-left: 5vh;
-    margin-top: 30px;
-    margin-bottom: 63px;
+    padding-left: 15px;
+    margin-left: 7vh;
+    margin-top: 4px;
+    color: white;
+    margin-bottom: 38px;
+    font-family: 'Cinzel';
   }
   .work-button-style-outer {
     display: flex;
