--- a/src/More/aboutUs.css
+++ b/src/More/aboutUs.css
@@ -1,78 +1,90 @@
-.about-main-style{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding: 50px 0px;
+.about-main-style {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 50px 0px;
 }
-.about-us-heading{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding-top: 40px;
+.about-us-heading {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding-top: 40px;
+  font-family: "Cinzel";
+  letter-spacing: 2px;
+  font-weight: bold;
 }
-.about-content-style{
-    max-width: 400px;
-    align-content: justify;
-    align-items: justify;}
-    .about-all-content{
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-        text-align: justify;
-        justify-content: center;
-    }
-    .about-graph-data{
-        display: flex;
-        flex-direction: column;
-        /* align-items: center; */
-        justify-content: center; 
-    }
-.about-background-color{
+.about-content-style {
+  max-width: 400px;
+  align-content: justify;
+  align-items: justify;
+}
+.about-all-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  text-align: justify;
+  justify-content: center;
+}
+.about-all-content h3 {
+  font-family: "Cinzel";
+}
+.about-all-content p {
+  font-family: Nuninto;
+}
+.about-graph-data {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: center;
+}
+.about-graph-data h4 {
+  font-family: "Cinzel";
+}
+.about-graph-data h6 {
+  font-family: Nuninto;
+}
+.about-background-color {
   color: white;
 }
-.horizintal-line-about{
-    
-        height: 0px;
-        /* margin-top: 16px; */
-        /* margin-left: 18px; */
-        width: 100%;
-        border-bottom: 3px solid #00FF0A;
-
- 
+.horizintal-line-about {
+  height: 0px;
+  /* margin-top: 16px; */
+  /* margin-left: 18px; */
+  width: 100%;
+  border-bottom: 3px solid #00ff0a;
 }
-.about-graph-data h4{
-    font-size: 2.0rem;
-
+.about-graph-data h4 {
+  font-size: 2rem;
 }
-.percentage-style{
-    /* margin-left: 34%; */
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-end;
-    margin-bottom: 0px;
+.percentage-style {
+  /* margin-left: 34%; */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  margin-bottom: 0px;
 }
-.about-graph-data h6{
-    padding-top: 20px;
-    margin-bottom: 0px;
+.about-graph-data h6 {
+  padding-top: 20px;
+  margin-bottom: 0px;
 }
 
 @media only screen and (max-width: 900px) {
-    .about-main-style{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 50px 0px;
-    }
-    .about-all-content{
-        padding-top: 30px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        justify-content: center;
-    }
+  .about-main-style {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 50px 0px;
+  }
+  .about-all-content {
+    padding-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+  }
 }
