--- a/src/More/contactUsForm.css
+++ b/src/More/contactUsForm.css
@@ -161,6 +161,7 @@
   color: white;
 
   border: none;
+  font-family: 'Cinzel';
 }
 .contactus-button-outer {
   display: flex;
@@ -174,6 +175,13 @@
   align-items: center;
   justify-content: center;
 }
+.contact-form-fields-section-style 
+ h3{
+  font-family: 'Cinzel';
+  letter-spacing: 2px;
+  font-weight: bold;
+
+ }
 .send-message-style {
   padding: 30px 0px;
 }
