--- a/src/Careers/careersHome.css
+++ b/src/Careers/careersHome.css
@@ -25,3 +25,15 @@
 .careers-drop-outer{
   padding-top: 20px;
 }
+@media screen and (max-width: 900px) {
+  .careers-dropdown {
+    background-color: #262250;
+    width: 40%;
+    height: 30px;
+    margin-left: 115px;
+    padding: 0px 12px;
+    border: none;
+    border-radius: 12px;
+    color: white;
+}
+}
