--- a/src/HomePage/gamingNft.css
+++ b/src/HomePage/gamingNft.css
@@ -232,7 +232,8 @@
   }
 
   .gamingnft-detail-bottom-outer {
-    background-color: #393469;
+    display: none;
+    /* background-color: #393469;
     padding: 20px;
 
     border-radius: 12px;
@@ -241,7 +242,7 @@
     justify-content: center;
 
     align-items: center;
-    align-content: space-between;
+    align-content: space-between; */
   }
   .market-product-detail-background {
     background-color: #262250;
