--- a/src/HomePage/mileStoneStepper.css
+++ b/src/HomePage/mileStoneStepper.css
@@ -108,7 +108,9 @@
   flex-direction: row;
   justify-content: center;
 }
-
+.outer-flex-content-milestone{
+  display: flex;
+}
 @media screen and (max-width: 900px) {
   .stepper-content-background {
     background-color: #262250;
@@ -154,5 +156,9 @@
     background-color: #393469;
     border-radius: 12px;
     width: 80%;
+  }
+  .outer-flex-content-milestone{
+    display: flex;
+    justify-content: center;
   }
 }
