--- a/src/More/contactUsForm.css
+++ b/src/More/contactUsForm.css
@@ -188,3 +188,16 @@
 /* .contactform-background-color{
       background-color: white;
   } */
+
+  @media screen and (max-width: 900px) {
+    .contactus-button-style {
+      margin-top: 4%;
+      padding: 6px 18px;
+      width: 50%;
+      border-radius: 12px;
+      background-color: #58acff;
+      color: white;
+      border: none;
+      font-family: 'Cinzel';
+  }
+  }
