--- a/src/HomePage/Tescards.css
+++ b/src/HomePage/Tescards.css
@@ -224,9 +224,9 @@
     display: none;
   }
   .game-heading-outer {
-    border-left: 0px solid #c438ef;
-    padding-left: 0px;
-    margin-left: 0;
+    border-left: 4px solid #c438ef;
+    padding-left: 19px;
+    margin-left: -36%;
     margin-top: 0px;
   }
   .our-games-outer-pad {
@@ -239,4 +239,39 @@
     padding: 40px 0px;
     margin-top: 70px;
   }
+  .tes-scr h6 {
+    padding-left: 8px;
+    color: #ffffff;
+    padding-top: 0px;
+    padding-bottom: 10px;
+}
+.tes-scr h3 {
+  padding-left: 10px;
+  color: #ffffff;
+  padding-top: 19px;
+  font-size: 25px;
+  font-family: "Cinzel";
+  padding-bottom: 9px;
+}
+.flex-style-props {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+.tes-scr h4 {
+  align-items: center;
+  padding-left: 4px;
+  position: absolute;
+  color: #ffffff;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 38px;
+  margin-left: 2%;
+  margin-top: 0;
+  font-family: 'Cinzel';
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+  line-height: 1.2;
+}
 }
