--- a/src/HomePage/gamingNft.css
+++ b/src/HomePage/gamingNft.css
@@ -206,7 +206,7 @@
   .gaming-nft-heading {
     border-left: 4px solid #c438ef;
     padding-left: 15px;
-    margin-left: 2vh;
+    margin-left: -2vh;
     margin-top: 2px;
     color: white;
     margin-bottom: 54px;
@@ -214,7 +214,9 @@
   }
 
   .gaming-nft-link-buttons {
+  
     display: flex;
+    align-items: center;
     flex-direction: column;
     justify-content: space-evenly;
   }
@@ -227,8 +229,8 @@
     box-shadow: 2px 2px 20px rgb(0 0 0 / 20%);
 } */
   .gaming-nft-slider-outer {
-    padding-left: 0px;
-    padding-right: 60px;
+    padding-left: 14px;
+    padding-right: 40px;
   }
 
   .gamingnft-detail-bottom-outer {
