--- a/src/HomePage/vision.css
+++ b/src/HomePage/vision.css
@@ -161,4 +161,13 @@ padding-right: 1px;
     width: 333px;
     padding-bottom: 10px;
   }
+  .vision-heading-outer {
+    border-left: 4px solid #c438ef;
+    padding-left: 15px;
+    margin-left: 3vh;
+    margin-top: 8px;
+    color: white;
+    margin-bottom: 38px;
+    font-family: 'Cinzel';
+}
 }
